[package]
name = "targets"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
mustache = "0.9.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
shellexpand = { version = "3.1.1", features = ["path"] }
toml = "0.9.6"
